count score algorithm